package common.models;

public interface Entity {
    String getId();
    String getName();
}
