@startuml ModelDTOLayer
title Common Model and DTO Layer

top to bottom direction
skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 55
skinparam ranksep 70
hide empty members

package "Protocol DTO" as DTO {
  class Message {
    +action: String
    +id: String
    +data: Object
  }
  class BidHistoryDTO
  class ProductDetailResponse
}

package "User Model" as Users {
  interface Entity
  class User
  class Bidder
  class Seller
  class Admin
}

package "Auction Model" as Auction {
  class Item
  class Art
  class AuctionRoom
  class BidTransaction
  class PendingAuctionRequest
}

package "Policy" as Policy {
  interface RolePolicy
  class DefaultRolePolicy
}

Entity <|.. User
User <|-- Bidder
User <|-- Seller
User <|-- Admin

Item <|-- Art
AuctionRoom o-- Item : item
AuctionRoom --> Seller : owner
BidTransaction --> AuctionRoom
BidTransaction --> Bidder
PendingAuctionRequest --> Seller
PendingAuctionRequest --> Item

ProductDetailResponse --> AuctionRoom
ProductDetailResponse o-- BidHistoryDTO
RolePolicy <|.. DefaultRolePolicy

Message ..> User : login data
Message ..> AuctionRoom : room data
Message ..> ProductDetailResponse : detail data
@enduml
